--- a/analytics_dashboard (1).html
+++ b/analytics_dashboard (1).html
@@ -570,7 +570,7 @@
 
     <script>
         // ========== API CONFIGURATION ==========
-        const API_URL = window.location.hostname === 'localhost' 
+        const API_URL = 'https://script.google.com/macros/s/AKfycbyLLOtroQHg98jRh81cvl9koVwCRYL9wWjGPd8Gb3Gdlsc_UAwWfQ8c6QqvLV47RqNqxQ/exec';
           ? 'http://localhost:3000' 
           : 'https://YOUR_DEPLOYED_BACKEND_URL.vercel.app';
         
