--- a/analytics_dashboard (1).html
+++ b/analytics_dashboard (1).html
@@ -662,7 +662,7 @@
             submitBtn.disabled = true;
 
             try {
-                const response = await fetch(`${API_URL}/api/query`, {
+                cconst response = await fetch(API_URL, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
