--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             'admin@noon.com': 'admin123'
         };
 
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyLLOtroQHg98jRh81cvl9koVwCRYL9wWjGPd8Gb3Gdlsc_UAwWfQ8c6QqvLV47RqNqxQ/exec';
+        const SCRIPT_URL = 'https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbyLLOtroQHg98jRh81cvl9koVwCRYL9wWjGPd8Gb3Gdlsc_UAwWfQ8c6QqvLV47RqNqxQ/exec';
 
         let isLoggedIn = false;
 
