--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         };
         
         // YOUR GOOGLE APPS SCRIPT URL
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyLLOtroQHg98jRh81cvl9koVwCRYL9wWjGPd8Gb3Gdlsc_UAwWfQ8c6QqvLV47RqNqxQ/exec';
+        const SCRIPT_URL = 'https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbyLLOtroQHg98jRh81cvl9koVwCRYL9wWjGPd8Gb3Gdlsc_UAwWfQ8c6QqvLV47RqNqxQ/exec';
         
         let loggedIn = false;
         let sheetData = null;
